Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112945

QML RangeSlider does not work well on touch screen

XMLWordPrintable

    • Windows
    • f6fb9252c (dev), 322c4c4af (6.5), e5e5ab7bd (6.5.1), 8b3661988 (tqtc/lts-5.15), 699f5253a (tqtc/lts-6.2)

      A minimal reproducer is simply a RangeSlider in a QML Window:

      import QtQuick
      import QtQuick.Controls
      import QtQuick.Layouts
      
      ApplicationWindow {
          width: 400
          height: 400
          visible: true
      
          ColumnLayout {
              spacing: 100
              anchors.centerIn: parent
      
              Slider {}
      
              RangeSlider {
                  id: mySlider
                  from: 1
                  to: 100
                  first.value: 1
                  second.value: 100
              }
          }
      }
      

      Any property is irrelevant. They can be any values and they do not matter.

      The issue is that a touch is expected to behave in the same way as a mouse click. That is, a mouse click moves the first or second handle to mouse position. and a touch should also moves the first or second handle to finger position. But touch does not move handles.

      More related information:
      1. Dragging works well, i.e., one can touch the screen, keep pressing and drag the handles.
      2. Normal Slider works fine with both touching and dragging. The touching issue only happens to RangeSlider.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dorisverria Doris Verria
            luqiaochen Luqiao Chen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: